syntax="proto3";

package tech.pcbook;

option go_package = "./pb";

import "laptop_message.proto";

message CreateLaptopRequest {
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}

service LaptopService {
    // Urinary RPC
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
}

