syntax="proto3";

option go_package = "./proto";

package cpu_service;

message CPU {
    // CPU brand
    string brand = 1;
    string name = 2;
    // CPU cores
    uint32 number_cores = 3;
    uint32 number_threads = 4;
    // CPU min and max frequency
    double min_ghz = 5;
    double max_ghz = 6;
}